Bug #1620129: Made the search button on the default theme right aligned
Also remove the rounded corners where the button touches the input box

behatnotneeded

(cherry picked from commit 9bc4437082078c52319ab68be3d75616505df257)

--- a/htdocs/theme/default/sass/layout/_header.scss
+++ b/htdocs/theme/default/sass/layout/_header.scss
@@ -51,3 +51,12 @@
         }
     }
 }
+.header-search-form {
+    .text {
+        border-radius: 3px 0 0 3px;
+    }
+    .input-group-btn {
+        border-radius: 0 3px 3px 0;
+        float: right;
+    }
+}
